--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/jasmine": "^5.1.4",
+    "@types/node": "^22.7.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-transition-group": "^4.4.11",
