--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 jwt.key = ${JWT_KEY}
+domi.assets.path = ${DOMI_ASSETS2}
 
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_SECRET}
