--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@toast-ui/react-editor": "^3.2.3",
     "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
