--- a/server/build.gradle
+++ b/server/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation "io.jsonwebtoken:jjwt-api:0.12.3"
     runtimeOnly "io.jsonwebtoken:jjwt-gson:0.12.3"
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.3"
+    implementation 'org.jsoup:jsoup:1.18.1'
 }
 
 tasks.named('test') {
