--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@toast-ui/react-editor": "^3.2.3",
     "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-avatar-editor": "^13.0.2",
     "react-cookie": "^7.2.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -28,6 +29,7 @@
     "@types/jasmine": "^5.1.4",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.3",
+    "@types/react-avatar-editor": "^13.0.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-transition-group": "^4.4.11",
     "@vitejs/plugin-react": "^4.3.1",
