--- a/server/build.gradle
+++ b/server/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     runtimeOnly "io.jsonwebtoken:jjwt-gson:0.12.3"
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.3"
     implementation 'org.jsoup:jsoup:1.18.1'
+    implementation 'org.commonmark:commonmark:0.24.0'
 }
 
 tasks.named('test') {
