--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,10 +13,11 @@ domi.assets.path = ${DOMI_ASSETS2}
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_SECRET}
 spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/oauth2/callback/google
 
 spring.security.oauth2.client.registration.kakao.client-id=${KAKAO_CLIENT}
 spring.security.oauth2.client.registration.kakao.client-secret=${KAKAO_SECRET}
-spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/oauth2/callback/kakao
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,profile_image,account_email
@@ -26,3 +27,28 @@ spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kak
 spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+
+spring.security.oauth2.client.registration.discord.client-id=${DISCORD_CLIENT}
+spring.security.oauth2.client.registration.discord.client-secret=${DISCORD_SECRET}
+spring.security.oauth2.client.registration.discord.client-authentication-method=client_secret_post
+spring.security.oauth2.client.registration.discord.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.discord.scope=identify
+spring.security.oauth2.client.registration.discord.redirect-uri={baseUrl}/oauth2/callback/discord
+spring.security.oauth2.client.registration.discord.client-name=FourScouts client
+
+spring.security.oauth2.client.provider.discord.authorization-uri=https://discordapp.com/api/oauth2/authorize
+spring.security.oauth2.client.provider.discord.token-uri=https://discordapp.com/api/oauth2/token
+spring.security.oauth2.client.provider.discord.user-info-uri=https://discordapp.com/api/users/@me
+spring.security.oauth2.client.provider.discord.user-name-attribute=username
+
+spring.security.oauth2.client.registration.naver.client-id=${NAVER_CLIENT}
+spring.security.oauth2.client.registration.naver.client-secret=${NAVER_SECRET}
+spring.security.oauth2.client.registration.naver.scope=name,email
+spring.security.oauth2.client.registration.naver.client-name=Naver
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/oauth2/callback/naver
+
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
