--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-avatar-editor": "^13.0.2",
     "react-cookie": "^7.2.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-textarea-autosize": "^8.5.3",
