--- a/publisher/config.json
+++ b/publisher/config.json
@@ -1,4 +1,7 @@
 {
     "port": 3000,
-    "staticRoot": "./static"
+    "staticRoot": "./static",
+    "cache": {
+        "path": "cachePage"
+    }
 }
