--- a/publisher/package.json
+++ b/publisher/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "express-http-proxy": "^2.1.1",
-    "isbot": "^5.1.21"
+    "isbot": "^5.1.21",
+    "url-pattern": "^1.0.3"
   }
 }
