--- a/publisher/package.json
+++ b/publisher/package.json
@@ -13,6 +13,7 @@
     "express": "^4.21.2",
     "express-http-proxy": "^2.1.1",
     "isbot": "^5.1.21",
+    "puppeteer": "^24.0.0",
     "url-pattern": "^1.0.3"
   }
 }
