#29 페이지 캐싱 동시 제한

--- a/publisher/config.json
+++ b/publisher/config.json
@@ -2,6 +2,7 @@
     "port": 3000,
     "staticRoot": "./static",
     "cache": {
-        "path": "cachePage"
+        "path": "cachePage",
+        "maxWorker": 5
     }
 }
