--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
     "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.3",
+    "@types/prismjs": "^1.26.5",
     "axios": "^1.7.7",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-avatar-editor": "^13.0.2",
     "react-cookie": "^7.2.1",
