--- a/server/build.gradle
+++ b/server/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.18.1'
     implementation 'org.commonmark:commonmark:0.24.0'
     implementation "org.commonmark:commonmark-ext-gfm-tables:0.24.0"
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
