--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
 spring.jpa.hibernate.ddl-auto=update
 
 jwt.key = ${JWT_KEY}
