js로 바꿈 (import 가 안먹음)

--- a/AI_play/package.json
+++ b/AI_play/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ai_play",
   "version": "1.0.0",
+  "type": "commonjs",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "build": "tsc -p .",
-    "dev": "nodemon --exec node --loader ts-node/esm main.ts"
+    "dev": "nodemon ./main.js"
   },
   "keywords": [],
   "author": "",
