--- a/AI_play/package.json
+++ b/AI_play/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
