--- a/sitemap_builder/package.json
+++ b/sitemap_builder/package.json
@@ -13,7 +13,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express": "^5.0.0",
+    "express": "^4.21.2",
+    "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.7"
   }
 }
