--- a/sitemap_builder/package.json
+++ b/sitemap_builder/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/express": "^5.0.0",
     "express": "^4.21.2",
+    "fast-xml-parser": "^4.5.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
