--- a/sitemap_builder/package.json
+++ b/sitemap_builder/package.json
@@ -18,7 +18,8 @@
     "fast-xml-parser": "^4.5.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "url-pattern": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.10.7"
