--- a/sitemap_builder/package.json
+++ b/sitemap_builder/package.json
@@ -17,11 +17,13 @@
     "express": "^4.21.2",
     "fast-xml-parser": "^4.5.1",
     "mysql2": "^3.12.0",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "url-pattern": "^1.0.3"
   },
   "devDependencies": {
-    "@types/node": "^22.10.7"
+    "@types/node": "^22.10.7",
+    "@types/node-cron": "^3.0.11"
   }
 }
