--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@toast-ui/react-editor": "^3.2.3",
     "@types/prismjs": "^1.26.5",
     "axios": "^1.7.7",
+    "katex": "^0.16.22",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-avatar-editor": "^13.0.2",
